--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "_dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" npm run dotenv -- next dev | pino-pretty --colorize",
-    "dev": "concurrently \"pnpm _dev\" \"pnpm worker:datasource-loader\"",
+    "dev": "concurrently \"pnpm start\" \"pnpm worker:datasource-loader\"",
     "dev:all:test": "NODE_ENV=test APP_ENV=test concurrently \"pnpm dev -p 3042\" \"pnpm worker:datasource-loader\"",
     "build": "npm run dotenv -- next build",
     "tunnel": "npm run dotenv -- pnpx localtunnel -- --port 3000 --subdomain $USER-chaindesk",
@@ -99,10 +99,10 @@
     "msgpackr": "^1.9.3",
     "multer": "1.4.5-lts.1",
     "next": "14.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.3",
     "nodemailer": "^6.9.1",
     "nprogress": "^0.2.0",
-    "openai": "^4.46.1",
+    "openai": "^4.29.1",
     "p-debounce": "^4.0.0",
     "p-map": "^5.5.0",
     "p-retry": "^5.1.2",
